--- a/MangaSocial/Screens/Auth/Forgot/ForgotViewController.xib
+++ b/MangaSocial/Screens/Auth/Forgot/ForgotViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotViewController" customModule="MangaSocial" customModuleProvider="target">
             <connections>
                 <outlet property="emailTextfield" destination="sLh-HH-P1W" id="1eV-vE-jG6"/>
+                <outlet property="errorEmailView" destination="OwS-PO-FjK" id="CMG-DR-Wdl"/>
+                <outlet property="loginContinueButton" destination="WL8-PY-UGv" id="mZ6-J6-M4p"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -92,6 +94,9 @@
                                             <color key="value" name="placeholder"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="changeEmailView:" destination="-1" eventType="editingChanged" id="fmQ-Y7-4M9"/>
+                                    </connections>
                                 </textField>
                             </subviews>
                             <color key="backgroundColor" name="main.input.bg"/>
@@ -104,15 +109,33 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </stackView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OwS-PO-FjK">
+                            <rect key="frame" x="0.0" y="100" width="353" height="24.333333333333329"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email không hợp lệ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZwN-LA-0w7">
+                                    <rect key="frame" x="4" y="4" width="349" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                    <color key="textColor" systemColor="systemRedColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="ZwN-LA-0w7" firstAttribute="leading" secondItem="OwS-PO-FjK" secondAttribute="leading" constant="4" id="2tO-uR-IxO"/>
+                                <constraint firstItem="ZwN-LA-0w7" firstAttribute="top" secondItem="OwS-PO-FjK" secondAttribute="top" constant="4" id="8g7-LX-g7Q"/>
+                                <constraint firstAttribute="bottom" secondItem="ZwN-LA-0w7" secondAttribute="bottom" id="QzI-n0-dJx"/>
+                                <constraint firstAttribute="trailing" secondItem="ZwN-LA-0w7" secondAttribute="trailing" id="nn4-uV-Gr1"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eQD-BF-odj">
-                            <rect key="frame" x="0.0" y="100" width="353" height="20"/>
+                            <rect key="frame" x="0.0" y="124.33333333333334" width="353" height="20"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20" id="Ton-fi-J44"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WL8-PY-UGv">
-                            <rect key="frame" x="0.0" y="120" width="353" height="40"/>
+                            <rect key="frame" x="0.0" y="144.33333333333334" width="353" height="40"/>
                             <color key="backgroundColor" name="main.disable"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="OuR-hE-2D4"/>
@@ -131,7 +154,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ya-Ez-vzR">
-                            <rect key="frame" x="0.0" y="160" width="353" height="599"/>
+                            <rect key="frame" x="0.0" y="184.33333333333331" width="353" height="574.66666666666674"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
@@ -167,6 +190,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
