--- a/MangaSocial/Screens/Home/Type2/ReleasedComicTableViewCell.xib
+++ b/MangaSocial/Screens/Home/Type2/ReleasedComicTableViewCell.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="263" id="KGk-i7-Jjw" customClass="ReleasedComicTableViewCell" customModule="MangaSocial" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="200" height="263"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="200" height="263"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -58,10 +58,10 @@
                         </constraints>
                     </stackView>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="UXa-b2-9aw">
-                        <rect key="frame" x="5" y="57" width="195" height="721"/>
+                        <rect key="frame" x="0.0" y="57" width="200" height="196"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="721" id="NUL-TU-6FT"/>
+                            <constraint firstAttribute="height" priority="999" constant="20" id="NUL-TU-6FT"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pyc-d5-Vyu">
                             <size key="itemSize" width="128" height="128"/>
@@ -80,7 +80,7 @@
                     <constraint firstItem="pzM-wF-VCV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="PY0-fX-7TI"/>
                     <constraint firstAttribute="bottom" secondItem="UXa-b2-9aw" secondAttribute="bottom" constant="10" id="UI4-N8-qXT"/>
                     <constraint firstAttribute="trailing" secondItem="UXa-b2-9aw" secondAttribute="trailing" id="dg4-nh-c33"/>
-                    <constraint firstItem="UXa-b2-9aw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="hw5-VO-iWn"/>
+                    <constraint firstItem="UXa-b2-9aw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hw5-VO-iWn"/>
                     <constraint firstItem="ocY-aP-t5n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="ocB-cP-OIv"/>
                 </constraints>
             </tableViewCellContentView>
@@ -88,6 +88,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="categoryAnimeLabel" destination="Ndf-I3-i3Y" id="n81-Yt-20J"/>
+                <outlet property="collectionHeight" destination="NUL-TU-6FT" id="JxW-1p-8Gg"/>
                 <outlet property="myCollectionReleasedComic" destination="UXa-b2-9aw" id="ZWr-ZS-J18"/>
                 <outlet property="serverButton" destination="YVR-Pl-bwr" id="R6X-vD-SCY"/>
             </connections>
